Refactor sanitize workflow for improved scanning

--- a/.github/workflows/sanitize.yml
+++ b/.github/workflows/sanitize.yml
@@ -1,39 +1,23 @@
-name: sanitize
-on:
-  push:
-  pull_request:
-permissions:
-  contents: read
-  pull-requests: write
+name: CI - Sanitize & Parse
+on: [push, pull_request]
 jobs:
-  leak-scan:
+  sanitize:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      # gitleaks：快速偵測常見金鑰/密碼
-      - name: Run gitleaks
+      - name: Secret scan (gitleaks)
         uses: gitleaks/gitleaks-action@v2
-        env:
-          GITLEAKS_LICENSE: ${{ secrets.GITLEAKS_LICENSE }} # 無也可
         with:
-          args: detect --verbose --no-banner --redact --exit-code 1
-      # truffleHog：補充掃描假端點/憑證模式
-      - name: Run trufflehog
-        uses: trufflesecurity/trufflehog@v3
-        with:
-          path: .
-          base: HEAD~1
-          head: HEAD
-          redact: true
-  block-prod-secrets:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - name: Fail on forbidden patterns
+          fail: true
+      - name: Enforce placeholders only
         run: |
-          egrep -RIn --exclude-dir=.git --exclude-dir=.github \
-            -e 'AKIA[0-9A-Z]{16}' \
-            -e '-----BEGIN (RSA|EC|PRIVATE) KEY-----' \
-            -e 'prod[-_.]endpoint' \
-            -e 'real[-_.]url' \
-            -e 'Bearer [A-Za-z0-9_\-\.]+' . && { echo "Forbidden pattern found"; exit 1; } || echo "OK"
+          set -e
+          # No real-looking URLs (must use example.invalid)
+          if grep -R -nE 'https?://(?![^ ]*example\.invalid)' --include='*.md' --include='*.json' .; then
+            echo "::error::Replace all URLs with example.invalid placeholders"; exit 1; fi
+          # No obvious keys/certs tokens
+          if grep -R -nE '(AKIA|ASIA|AIzaSy|ghp_|xoxb-|-----BEGIN (PRIVATE|RSA) KEY-----)' .; then
+            echo "::error::Looks like a real key/cert material"; exit 1; fi
+      - name: JSON parses
+        run: |
+          find . -name "*.json" -print0 | xargs -0 -I{} sh -c 'jq . {} >/dev/null'
